# fastapi_mcpagent

./: .env  .gitignore  README.md  main.py  pydantic_ai_evals.yaml  pydantic_ai_evals_schema.json  pyproject.toml
src/: agent.py  app.py  mcp_agent.py
tests/: evals.py
